@@ -4,7 +4,7 @@
 
 	<property file="${user.home}/.activiti/build.properties" />
 
-	<property name="activiti.version" value="5.15-SNAPSHOT" />
+	<property name="activiti.version" value="5.16" />
 	<property name="target.distro.root" value="target/zip/activiti-${activiti.version}" />
 	<property name="activiti.website" value="../../activiti-website" />
 
@@ -35,7 +35,7 @@
 			<equals arg1="${nodocs}" arg2="true" />
 		</condition>
 		<exec executable="${mvn.executable}" dir=".." failonerror="true">
-			<env key="MAVEN_OPTS" value="-Xmx1024m -Xms512m" />
+			<env key="MAVEN_OPTS" value="-Xmx1024m -Xms512m -XX:MaxPermSize=256M" />
 			<arg line="-Pdistro${nodocs.profile} clean install -Dmaven.test.skip=true" />
 		</exec>
 	</target>
@@ -57,14 +57,23 @@
 			<fileset dir="../modules/activiti-spring/target">
 				<include name="activiti-spring-*.jar" />
 			</fileset>
+			<fileset dir="../modules/activiti-spring-boot/target">
+				<include name="activiti-spring-boot-*.jar" />
+			</fileset>
 			<fileset dir="../modules/activiti-bpmn-model/target">
 				<include name="activiti-bpmn-model-*.jar" />
 			</fileset>
 			<fileset dir="../modules/activiti-bpmn-converter/target">
 				<include name="activiti-bpmn-converter-*.jar" />
 			</fileset>
+		   	<fileset dir="../modules/activiti-process-validation/target">
+		        <include name="activiti-process-validation-*.jar" />
+		   	</fileset>
 			<fileset dir="../modules/activiti-bpmn-layout/target">
 				<include name="activiti-bpmn-layout-*.jar" />
+			</fileset>
+			<fileset dir="../modules/activiti-image-generator/target">
+				<include name="activiti-image-generator-*.jar" />
 			</fileset>
 			<fileset dir="../modules/activiti-json-converter/target">
 				<include name="activiti-json-converter-*.jar" />
@@ -104,6 +113,9 @@
 			</fileset>
 			<fileset dir="../modules/activiti-osgi/target">
 				<include name="activiti-osgi-*.jar" />
+			</fileset>
+			<fileset dir="../modules/activiti-crystalball/target">
+				<include name="activiti-crystalball-*.jar" />
 			</fileset>
 		</copy>
 
